<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="123dp"
                    android:layout_height="118dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/lbl_create_account"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_baseline_perm_identity_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/email_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:padding="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_baseline_perm_identity_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/name_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:padding="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_round_lock_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/password_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:padding="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_round_lock_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/confirm_password_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/lbl_confirm_password"
                            android:inputType="textPassword"
                            android:padding="15dp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_create_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_button_login"
                        android:padding="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/lbl_register"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/back_to_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/lbl_back_to_login"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>