<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/CV"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_centerInParent="true"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="123dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/lbltitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_login"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_baseline_perm_identity_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/loginEnterEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_round_lock_24"
                            android:contentDescription="@string/image" />

                        <EditText
                            android:id="@+id/loginEnterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:textSize="20sp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/round_button_login"
                        android:text="@string/btn_login" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/lbl_create_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:text="@string/create_account"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>